<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <string name="add_movie">Add Movie</string>
    <string name="how2Add_dialog">How to add your movie?</string>
    <string name="deleteMovie_dialog">Delete this movie?</string>
    <string name="my_movies">My Movies</string>
    <string name="movie_list">Movie List</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="enter_movie_details">Enter Movie Details:</string>
    <string name="search_movie">Search Movie</string>
    <string name="choose_movie">Choose Movie:</string>
    <string name="movie_title">Title</string>
    <string name="wached">Wached</string>
    <string name="movie_description">Description</string>
    <string name="load_movie_picture">Load Movie Picture:</string>
    <string name="url">URL</string>
    <string name="show">Show</string>
    <string name="search">Search:</string>
    <string name="find">Find</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear_list">Clear List</string>
    <string name="exit">Exit</string>
    <string name="rate">Rate</string>
    <string name="manually">Manually</string>
    <string name="internet">Internet</string>
    <string name="empty_list">Your List is empty</string>
    <string name="delete">Delete</string>
    <string name="delete_movie">Delete Movie</string>

</resources>