<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textViewSearchMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_movie"
        style="@style/Activity_Title" />

    <TextView
        android:id="@+id/textViewSearchMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        style="@style/Activity_SubTitle" />

    <EditText
        android:id="@+id/editTextSearchMovie"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/movie_title"
        android:inputType="text"
		style="@style/InputBox_Texts" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonFindMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find" />

        <Button
            android:id="@+id/buttonCancelFindMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewChooseMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_movie"
        style="@style/Activity_SubTitle" />

    <ListView
        android:id="@+id/listSearchReasults"
        android:layout_width="match_parent"
        android:layout_height="270dp" >
    </ListView>

    <ProgressBar
        android:id="@+id/progressBarSearch"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:visibility="gone" />

</LinearLayout>