<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical"
    android:padding="10dp"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/textViewEditMovieTitle"
        style="@style/Activity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_movie" />

    <TextView
        android:id="@+id/textViewEnterMovieDetails"
        style="@style/Activity_SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_movie_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewMovieTitle"
            style="@style/InputBox_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/movie_title" />

        <EditText
            android:id="@+id/editTextMovieTitle"
            style="@style/InputBox_Texts"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/movie_title"
            android:inputType="text"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewMovieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        style="@style/InputBox_Title" />

    <EditText
        android:id="@+id/editTextMovieDescription"
        style="@style/InputBox_Texts"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/movie_description"
        android:scrollHorizontally="false" />

    <TextView
        android:id="@+id/textViewLoadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_movie_picture"
        style="@style/Activity_SubTitle"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPictureUrl"
            style="@style/InputBox_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/url" />

        <EditText
            android:id="@+id/editTextPictureUrl"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textUri"
            style="@style/InputBox_Texts" />

        <Button
            android:id="@+id/buttonShowPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageViewMoviePicture"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:contentDescription="@string/load_movie_picture"
        android:src="@drawable/tv_black_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonSaveEditMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonDeleteMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/buttonCancelEditMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>